kubernetes/applications/shisha-log/postgrest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
  namespace: shisha-log
spec:
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
        - name: postgrest
          image: postgrest/postgrest:v12.2.12
          ports:
            - name: postgrest
              containerPort: 3000
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: postgrest-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: shisha-log
spec:
  selector:
    app: postgrest
  ports:
    - name: http
      port: 80
      targetPort: 8080
