kubernetes/applications/shisha-log/shisha-log.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: shisha-log
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shisha-log
  namespace: shisha-log
spec:
  selector:
    matchLabels:
      app: shisha-log
  template:
    metadata:
      labels:
        app: shisha-log
    spec:
      containers:
        - name: shisha-log
          image: ghcr.io/toof-jp/shisha-log-backend:sha-061d8e3
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shisha-log
  namespace: shisha-log
spec:
  selector:
    app: shisha-log
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shisha-log
  namespace: shisha-log
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: shisha-api.toof.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shisha-log
                port:
                  number: 8080
